# BookstoreRs

./: Cargo.toml  Taskfile.yml  env.toml
src/: config.rs  error.rs  main.rs  persistence.rs  slices.rs
src/slices/book_slices/: get_book.rs  mod.rs  post_book.rs  put_book.rs
src/types/: author.rs  book.rs  genre.rs  user.rs
