[package]
name = "rs_bookstore_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
mongodb = "3.1.0"
native-tls = "0.2.12"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
